@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST database_cleaner-0.5.2.gem 14848 RMD160 d12c1d1a1472222be41e7e78d27fe38a876fd19f SHA1 47c4dd2d68ccd3322cbed84ed326602902b603c3 SHA256 49f7fadb347fd178d5798c005b8bdab9f0c98b7c59cc43f04add67ce588d5f4f
 DIST database_cleaner-0.6.4.gem 29184 RMD160 5b2a1bf83e0a1610a247d8b1ccd94ac887eca2e8 SHA1 63ae0db58fa47dec8f236828e04e3bdb297ed5af SHA256 edb43c8fa02a278fc86e769efe864e67d956608431ab9ca8ba00c6efa25b8b30
-EBUILD database_cleaner-0.5.2.ebuild 814 RMD160 46f0022556932de7491f5172071728f84d7d1ccd SHA1 7718bdf63800850b0a3db9209977f706d41cbd20 SHA256 e3cecfe486c12e3477e84d333f6975c8319f1db203cf43175a1b4dc506f9244c
 EBUILD database_cleaner-0.6.4.ebuild 1156 RMD160 ac20957601359b3e323782bd214271b483f9914b SHA1 d85d8f453e979d97468aeda56aaf5fd4529be92b SHA256 04694e7f1340fa0ffcc4c05b49bfb17e703a77210278c8f07d24afbf7a48feb1
-MISC ChangeLog 1853 RMD160 fd8a0e658d73a20d0a88617ef2eff661aef88296 SHA1 d6ff643af482c591ec4a0437884d3c5feee1391f SHA256 08a5fa1b3d8fbfcdc9902185ef718fa53c577aa8492bfc6bd30454d4ae9b70cb
+MISC ChangeLog 1960 RMD160 ec8dbb49328e2394eeb562fd3ab74102208e3f1a SHA1 267842f451e1e9fc65703ced3a2d284a639fae77 SHA256 f810d5a6a2158e3f4f03d279b9988e6221c8980790adbcadbf6e23f10c811199
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk10uaoACgkQrnu0mw69JkoCoQD8D+cl84GCU6WNzmzwLL20gDUI
-uatrHb2MlAIR8b9l9MsA/j0fxTIVTpHkorlihya+xZu9xSO9E8bJlzjXMxHqll5W
-=VqbK
+iF4EAREIAAYFAk39nywACgkQrnu0mw69JkqxjgD/SMzDGSRKjojPAJ6zMi389JrW
+VaPjAX9zIzEsC965wEcA/373ysM9ZYRyey+uMOfwcveIfkzTCJdKAmW9jzES/za9
+=J5XR
 -----END PGP SIGNATURE-----
