@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Jun 2011; Hans de Graaff <graaff@gentoo.org>
+  -database_cleaner-0.5.2.ebuild:
+  Remove old version.
+
 *database_cleaner-0.6.4 (07 Mar 2011)
 
   07 Mar 2011; Hans de Graaff <graaff@gentoo.org>
